--- a/ui/index.html
+++ b/ui/index.html
@@ -7,8 +7,14 @@
     <!-- Primary Meta Tags -->
     <title>Clawdbrain — Autonomous AI Agent Orchestration Platform</title>
     <meta name="title" content="Clawdbrain — Autonomous AI Agent Orchestration Platform" />
-    <meta name="description" content="Orchestrate autonomous AI agents with persistent memory, human-in-the-loop approvals, and full observability. Coordinate specialized agents to plan, execute, and verify work across your stack." />
-    <meta name="keywords" content="AI agents, autonomous agents, agent orchestration, AI orchestration platform, human-in-the-loop, AI observability, agentic workflows, LLM agents, multi-agent systems" />
+    <meta
+      name="description"
+      content="Orchestrate autonomous AI agents with persistent memory, human-in-the-loop approvals, and full observability. Coordinate specialized agents to plan, execute, and verify work across your stack."
+    />
+    <meta
+      name="keywords"
+      content="AI agents, autonomous agents, agent orchestration, AI orchestration platform, human-in-the-loop, AI observability, agentic workflows, LLM agents, multi-agent systems"
+    />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Clawdbrain" />
     <meta name="color-scheme" content="dark light" />
@@ -21,21 +27,33 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://clawdbrain.com" />
     <meta property="og:title" content="Clawdbrain — Autonomous AI Agent Orchestration Platform" />
-    <meta property="og:description" content="Orchestrate autonomous AI agents with persistent memory, human-in-the-loop approvals, and full observability. Coordinate specialized agents to plan, execute, and verify work across your stack." />
+    <meta
+      property="og:description"
+      content="Orchestrate autonomous AI agents with persistent memory, human-in-the-loop approvals, and full observability. Coordinate specialized agents to plan, execute, and verify work across your stack."
+    />
     <meta property="og:site_name" content="Clawdbrain" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://clawdbrain.com/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Clawdbrain — Autonomous AI Agent Orchestration Platform" />
+    <meta
+      property="og:image:alt"
+      content="Clawdbrain — Autonomous AI Agent Orchestration Platform"
+    />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://clawdbrain.com" />
     <meta name="twitter:title" content="Clawdbrain — Autonomous AI Agent Orchestration Platform" />
-    <meta name="twitter:description" content="Orchestrate autonomous AI agents with persistent memory, human-in-the-loop approvals, and full observability." />
+    <meta
+      name="twitter:description"
+      content="Orchestrate autonomous AI agents with persistent memory, human-in-the-loop approvals, and full observability."
+    />
     <meta name="twitter:image" content="https://clawdbrain.com/og-image.png" />
-    <meta name="twitter:image:alt" content="Clawdbrain — Autonomous AI Agent Orchestration Platform" />
+    <meta
+      name="twitter:image:alt"
+      content="Clawdbrain — Autonomous AI Agent Orchestration Platform"
+    />
 
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
